updated to more modular js and css

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,7 @@ body {
 @import "./styles/language-selector.scss";
 @import "./styles/mega-nav.scss";
 @import "./styles/secondary-nav.scss";
+@import "./styles/hamburger.scss";
 
 
 .nav__search-button {
