--- a/src/styles/dropdown-mixin.scss
+++ b/src/styles/dropdown-mixin.scss
@@ -1,29 +1,42 @@
+@import "./media-queries-mixins.scss";
 
 @mixin dropdown($isList : false) {
-  display: none;
-  background: #fff;
-  padding: 80px 50px 20px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  max-width: 800px;
-  border: 1px solid $graylight;
-  border-top: none;
-  z-index: -1;
+    display: none;
+    background: #fff;
+   
+    @include bp( desktop ){
+        padding: 80px 50px 20px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        max-width: 800px;
+        border: 1px solid $graylight;
+        border-top: none;
+        z-index: -1;
+    }
 
-  &--show {
-      display: flex;
-  }
+    &--show {
+        display: flex;
+        flex-direction: column;
+        
+        @include bp(desktop){
+            flex-direction: row;
+        }
+    }
 
-  &__item {
-          
-      &__link{
-          color: #000;
-          white-space: nowrap;
+    &__item {
 
-          @if $isList {
-            line-height: 55px;
-          }
-      }
-  }
+        &__link {
+            color: #000;
+            white-space: nowrap;
+            display: block;
+            padding: 10px 0;
+
+            @if $isList {
+                @include bp( desktop ){
+                    line-height: 55px;
+                }
+            }
+        }
+    }
 }
